fix: scrollbar + responsive list

--- a/angular-pokedex/src/app/components/nav-bar/nav-bar.component.css
+++ b/angular-pokedex/src/app/components/nav-bar/nav-bar.component.css
@@ -1,7 +1,7 @@
 .content {
     display: inline-flex;
     width: 100%;
-    height: 8vw;
+    height: 8vmax;
 
     position: sticky;
     top: 0;
@@ -41,10 +41,10 @@
     left: 50%;
     z-index: -1;
 
-    border-top: 4vw solid var(--red);
-    border-left: 4vw solid var(--red);
-    border-bottom: 4vw solid transparent;
-    border-right: 4vw solid transparent;
+    border-top: 4vmax solid var(--red);
+    border-left: 4vmax solid var(--red);
+    border-bottom: 4vmax solid transparent;
+    border-right: 4vmax solid transparent;
 }
 
 .nav-right {
@@ -53,7 +53,7 @@
     justify-content: center;
 
     width: 50%;
-    height: 5vw;
+    height: 5vmax;
 
     background-color: var(--red);
 
@@ -61,7 +61,9 @@
         color: white;
         background-color: var(--darkGray);
 
-        padding: 1vw;
+        font-size: 1.3vmax;
+
+        padding: 1vmax;
         width: 60%;
         max-height: 60%;
 
