--- a/angular-pokedex/src/styles.css
+++ b/angular-pokedex/src/styles.css
@@ -13,3 +13,15 @@
 body {
     background-color: var(--darkGray);
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--red);
+}
+
+::-webkit-scrollbar-track {
+    background: var(--darkGray);
+}
